update March 15, 2023 at 14:03

--- a/03 ■► JS DOM/e-Commerce website project (03-10-2023 to 03-12-2023)/Ploranza.html
+++ b/03 ■► JS DOM/e-Commerce website project (03-10-2023 to 03-12-2023)/Ploranza.html
@@ -30,14 +30,14 @@
     <body>
         <!-- ◄◄|==========|==========|==========|==========|==========|==========|►► -->
         <!-- ►►►►►►►►►►| #(MENU BUTTON FOR RESPONSIVE NAVBAR AND HEADER) start |• -->
-        <button class="mobile-menu light-mode hidden">
+        <button class="mobile-menu hidden">
             <i class="fa-solid fa-bars fa-1x"></i> <!-- menu bars -->
             <i class="fa-solid fa-xmark fa-1x hidden"></i> <!-- menu close -->
         </button>
         <!-- •| #(MENU BUTTON FOR RESPONSIVE NAVBAR AND HEADER) end |◄◄◄◄◄◄◄◄◄◄ -->
         <!-- ◄◄|==========|==========|==========|==========|==========|==========|►► -->
         <!-- ►►►►►►►►►►| #(SCROLL UP BUTTON) start |• -->
-        <button class="scroll-top light-mode hidden">
+        <button class="scroll-top hidden">
             ▲
         </button>
         <!-- •| #(SCROLL UP BUTTON) end |◄◄◄◄◄◄◄◄◄◄ -->
@@ -47,7 +47,7 @@
             <div class="header">
                 <!-- logo -->
                 <div class="header__logo">
-                    <img class="header__logo--image" src="./Ploranza-assets/ploranza-images/logo-ploranza.png" alt="ploranza-logo">
+                    <img class="header__logo--image" src="./Ploranza-assets/ploranza-images/logo-ploranza-fix.png" alt="ploranza-logo">
                 </div>
                 <!-- search bar -->
                 <form action="#" class="header__search" method="get">
@@ -77,7 +77,7 @@
                             <!-- switch light or dark mode -->
                             <li class="header__userpanel--dropdown_column-switch-visual">
                                 <i class="fa-solid fa-sun fa-1x"></i>
-                                <span class="switch checked">
+                                <span class="switch">
                                     <span class="switch__button"></span>
                                 </span>
                                 <i class="fa-regular fa-moon fa-1x"></i>
@@ -415,7 +415,7 @@
         <!-- ◄◄|==========|==========|==========|==========|==========|==========|►► -->
         <!-- ►►►►►►►►►►| #(SECTION 0 - BREADCRUMB) start |• -->
         <section id="breadcrumb">
-            <div class="breadcrumb light-mode">Homepage/test/123
+            <div class="breadcrumb">Homepage/test/123
                 <!-- in JS, add with ${} innerHTML, add with "/" without space -->
                 <!-- <a class="breadcrumb__links" href="#">HOME</a> --- a sample p1 -->
                 <!-- <a class="breadcrumb__links" href="#">/About Us</a> --- a sample p2 -->
@@ -429,21 +429,21 @@
             <div class="section1-carousels">
                 <!-- slides | slide 1 -->
                 <div class="section1-carousels__slides">
-                    <img src="." alt="section1-carousel-cover" class="section1-carousels__slides--image">
+                    <img src="./Ploranza-assets/bg-wallpapers/news-sports.jpg" alt="section1-carousel-cover" class="section1-carousels__slides--image">
                     <div class="section1-carousels__slides--info">
                         <h3 class="section1-carousels__slides--info_header">Fitter, stronger, faster!</h3>
                     </div>
                 </div>
                 <!-- slides | slide 2 -->
                 <div class="section1-carousels__slides">
-                    <img src="." alt="section1-carousel-cover" class="section1-carousels__slides--image">
+                    <img src="./Ploranza-assets/bg-wallpapers/akrales_181026_2923_0022_main.jpg" alt="section1-carousel-cover" class="section1-carousels__slides--image">
                     <div class="section1-carousels__slides--info">
                         <h3 class="section1-carousels__slides--info_header">Shop computer & accessories</h3>
                     </div>
                 </div>
                 <!-- slides | slide 3 -->
                 <div class="section1-carousels__slides">
-                    <img src="." alt="section1-carousel-cover" class="section1-carousels__slides--image">
+                    <img src="./Ploranza-assets/bg-wallpapers/76e313117f92ca87aaf7ced78ae104a6.jpg" alt="section1-carousel-cover" class="section1-carousels__slides--image">
                     <div class="section1-carousels__slides--info">
                         <h3 class="section1-carousels__slides--info_header">Refresh your home with essentials</h3>
                     </div>
@@ -472,37 +472,42 @@
                     <!-- explore popular categories section cards container circles 1 -->
                     <a href="#" class="section2-exppopcateg__container--cards">
                         <div class="section2-exppopcateg__container--cards_cover">
-                            <img src="." alt="ccards-images" class="section2-exppopcateg__container--cards_cover-img">
+                            <img src="./Ploranza-assets/homepage-topsell-images/2017-01-02-image-3.jpg" 
+                            alt="ccards-images" class="section2-exppopcateg__container--cards_cover-img">
                         </div>
-                        <p class="section2-exppopcateg__container--cards_name">Lorem, ipsum dolor 1</p>
+                        <p class="section2-exppopcateg__container--cards_name">Gaming Laptop</p>
                     </a>
                     <!-- explore popular categories section cards container circles 2 -->
                     <a href="#" class="section2-exppopcateg__container--cards">
                         <div class="section2-exppopcateg__container--cards_cover">
-                            <img src="." alt="ccards-images" class="section2-exppopcateg__container--cards_cover-img">
+                            <img src="./Ploranza-assets/homepage-topsell-images/14_173_200007763_201336100.jpg" 
+                            alt="ccards-images" class="section2-exppopcateg__container--cards_cover-img">
                         </div>
-                        <p class="section2-exppopcateg__container--cards_name">Lorem, ipsum dolor 2</p>
+                        <p class="section2-exppopcateg__container--cards_name">Smart Watch</p>
                     </a>
                     <!-- explore popular categories section cards container circles 3 -->
                     <a href="#" class="section2-exppopcateg__container--cards">
                         <div class="section2-exppopcateg__container--cards_cover">
-                            <img src="." alt="ccards-images" class="section2-exppopcateg__container--cards_cover-img">
+                            <img src="./Ploranza-assets/homepage-topsell-images/13527999.jpeg" 
+                            alt="ccards-images" class="section2-exppopcateg__container--cards_cover-img">
                         </div>
-                        <p class="section2-exppopcateg__container--cards_name">Lorem, ipsum dolor 3</p>
+                        <p class="section2-exppopcateg__container--cards_name">Mobile</p>
                     </a>
                     <!-- explore popular categories section cards container circles 4 -->
                     <a href="#" class="section2-exppopcateg__container--cards">
                         <div class="section2-exppopcateg__container--cards_cover">
-                            <img src="." alt="ccards-images" class="section2-exppopcateg__container--cards_cover-img">
+                            <img src="./Ploranza-assets/homepage-topsell-images/A0ZX_1_20171205316191628.jpg" 
+                            alt="ccards-images" class="section2-exppopcateg__container--cards_cover-img">
                         </div>
-                        <p class="section2-exppopcateg__container--cards_name">Lorem, ipsum dolor 4</p>
+                        <p class="section2-exppopcateg__container--cards_name">Gaming PC</p>
                     </a>
                     <!-- explore popular categories section cards container circles 5 -->
                     <a href="#" class="section2-exppopcateg__container--cards">
                         <div class="section2-exppopcateg__container--cards_cover">
-                            <img src="." alt="ccards-images" class="section2-exppopcateg__container--cards_cover-img">
+                            <img src="./Ploranza-assets/homepage-topsell-images/Razer_Edge__4__01.jpg" 
+                            alt="ccards-images" class="section2-exppopcateg__container--cards_cover-img">
                         </div>
-                        <p class="section2-exppopcateg__container--cards_name">Lorem, ipsum dolor 5</p>
+                        <p class="section2-exppopcateg__container--cards_name">Tablet</p>
                     </a>
                 </div>
             </div>
@@ -517,35 +522,43 @@
                 <h3 class="section3-topsellbooks__header">TOP SELLERS IN BOOKS FOR YOU</h3>
                 <!-- book cards -->
                 <a class="section3-topsellbooks__cards">
-                    <img src="." alt="book-images" class="section3-topsellbooks__cards--img">
+                    <img src="./Ploranza-assets/homepage-book-images/51IA4hT6jrL._SX380_BO1,204,203,200_.jpg" 
+                    alt="book-images" class="section3-topsellbooks__cards--img">
                 </a>
                 <!-- book cards -->
                 <a class="section3-topsellbooks__cards">
-                    <img src="." alt="book-images" class="section3-topsellbooks__cards--img">
+                    <img src="./Ploranza-assets/homepage-book-images/61DiOXBOq4L.jpg" 
+                    alt="book-images" class="section3-topsellbooks__cards--img">
                 </a>
                 <!-- book cards -->
                 <a class="section3-topsellbooks__cards">
-                    <img src="." alt="book-images" class="section3-topsellbooks__cards--img">
+                    <img src="./Ploranza-assets/homepage-book-images/71aMLMZWutL.jpg" 
+                    alt="book-images" class="section3-topsellbooks__cards--img">
                 </a>
                 <!-- book cards -->
                 <a class="section3-topsellbooks__cards">
-                    <img src="." alt="book-images" class="section3-topsellbooks__cards--img">
+                    <img src="./Ploranza-assets/homepage-book-images/python.jpg" 
+                    alt="book-images" class="section3-topsellbooks__cards--img">
                 </a>
                 <!-- book cards -->
                 <a class="section3-topsellbooks__cards">
-                    <img src="." alt="book-images" class="section3-topsellbooks__cards--img">
+                    <img src="./Ploranza-assets/homepage-book-images/913tvBe7OOL.jpg" 
+                    alt="book-images" class="section3-topsellbooks__cards--img">
                 </a>
                 <!-- book cards -->
                 <a class="section3-topsellbooks__cards">
-                    <img src="." alt="book-images" class="section3-topsellbooks__cards--img">
+                    <img src="./Ploranza-assets/homepage-book-images/819DmGB3vhL.jpg" 
+                    alt="book-images" class="section3-topsellbooks__cards--img">
                 </a>
                 <!-- book cards -->
                 <a class="section3-topsellbooks__cards">
-                    <img src="." alt="book-images" class="section3-topsellbooks__cards--img">
+                    <img src="./Ploranza-assets/homepage-book-images/61efrLvvaxL.jpg" 
+                    alt="book-images" class="section3-topsellbooks__cards--img">
                 </a>
                 <!-- book cards -->
                 <a class="section3-topsellbooks__cards">
-                    <img src="." alt="book-images" class="section3-topsellbooks__cards--img">
+                    <img src="./Ploranza-assets/homepage-book-images/61ZuZASPz2L.jpg" 
+                    alt="book-images" class="section3-topsellbooks__cards--img">
                 </a>
             </div>
         </section>
@@ -562,37 +575,37 @@
                     <!-- explore popular brands section cards container circles 1 -->
                     <a href="#" class="section4-exppopbrands__container--cards">
                         <div class="section4-exppopbrands__container--cards_cover">
-                            <img src="." alt="bcards-images" class="section4-exppopbrands__container--cards_cover-img">
+                            <img src="./Ploranza-assets/homepage-brand-images/fb2ff610043abe0bbca0ee63a7962748.jpg" alt="bcards-images" class="section4-exppopbrands__container--cards_cover-img">
                         </div>
-                        <p class="section4-exppopbrands__container--cards_name">Lorem, ipsum dolor 1</p>
+                        <p class="section4-exppopbrands__container--cards_name">Nike</p>
                     </a>
                     <!-- explore popular brands section cards container circles 2 -->
                     <a href="#" class="section4-exppopbrands__container--cards">
                         <div class="section4-exppopbrands__container--cards_cover">
-                            <img src="." alt="bcards-images" class="section4-exppopbrands__container--cards_cover-img">
+                            <img src="./Ploranza-assets/homepage-brand-images/1d14cc506415a23c057e50808d49e90b.jpg" alt="bcards-images" class="section4-exppopbrands__container--cards_cover-img">
                         </div>
-                        <p class="section4-exppopbrands__container--cards_name">Lorem, ipsum dolor 2</p>
+                        <p class="section4-exppopbrands__container--cards_name">Samsung</p>
                     </a>
                     <!-- explore popular brands section cards container circles 3 -->
                     <a href="#" class="section4-exppopbrands__container--cards">
                         <div class="section4-exppopbrands__container--cards_cover">
-                            <img src="." alt="bcards-images" class="section4-exppopbrands__container--cards_cover-img">
+                            <img src="./Ploranza-assets/homepage-brand-images/index_acc_img.jpeg" alt="bcards-images" class="section4-exppopbrands__container--cards_cover-img">
                         </div>
-                        <p class="section4-exppopbrands__container--cards_name">Lorem, ipsum dolor 3</p>
+                        <p class="section4-exppopbrands__container--cards_name">Apple</p>
                     </a>
                     <!-- explore popular brands section cards container circles 4 -->
                     <a href="#" class="section4-exppopbrands__container--cards">
                         <div class="section4-exppopbrands__container--cards_cover">
-                            <img src="." alt="bcards-images" class="section4-exppopbrands__container--cards_cover-img">
+                            <img src="./Ploranza-assets/homepage-brand-images/cdac430d9deffbd9b18fc1ea2a39a0ed.jpg" alt="bcards-images" class="section4-exppopbrands__container--cards_cover-img">
                         </div>
-                        <p class="section4-exppopbrands__container--cards_name">Lorem, ipsum dolor 4</p>
+                        <p class="section4-exppopbrands__container--cards_name">Adidas</p>
                     </a>
                     <!-- explore popular brands section cards container circles 5 -->
                     <a href="#" class="section4-exppopbrands__container--cards">
                         <div class="section4-exppopbrands__container--cards_cover">
-                            <img src="." alt="bcards-images" class="section4-exppopbrands__container--cards_cover-img">
+                            <img src="./Ploranza-assets/homepage-brand-images/GP_Gifts_02.jpg" alt="bcards-images" class="section4-exppopbrands__container--cards_cover-img">
                         </div>
-                        <p class="section4-exppopbrands__container--cards_name">Lorem, ipsum dolor 5</p>
+                        <p class="section4-exppopbrands__container--cards_name">MSI</p>
                     </a>
                 </div>
             </div>
@@ -604,7 +617,7 @@
             <div class="footer">
                 <ul class="footer__columns">
                     <img class="footer__columns--logo" 
-                    src="./Ploranza-assets/ploranza-images/logo-ploranza.png" 
+                    src="./Ploranza-assets/ploranza-images/logo-ploranza-fix.png" 
                     alt="ploranza-flogo">
                 </ul>
                 <ul class="footer__columns">
@@ -1048,6 +1061,46 @@
                 <!-- ok button -->
                 <button class="comingsoon__ok">Ok</button>
             </div>
+            <!-- signed in successfully popup window -->
+            <div class="signed hidden">
+                <!-- x button -->
+                <button class="signed__cross">
+                    <i class="fa-solid fa-xmark fa-1x"></i>
+                </button>
+                <!-- alert image green verified with check sign -->
+                <div class="signed__image">
+                    <img src="./Ploranza-assets/dropdownmenu-images/success.png" alt="success-img" class="signed__image--symbol">
+                </div>
+                <!-- info -->
+                <div class="signed__text">You are signed in successfully.</div>
+                <!-- ok button -->
+                <button class="signed__ok">Ok</button>
+            </div>
+            <!-- registration completed popup window -->
+            <div class="registered hidden">
+                <!-- x button -->
+                <button class="registered__cross">
+                    <i class="fa-solid fa-xmark fa-1x"></i>
+                </button>
+                <!-- alert image green verified with check sign -->
+                <div class="registered__image">
+                    <img src="./Ploranza-assets/dropdownmenu-images/success.png" alt="success-img" class="registered__image--symbol">
+                </div>
+                <!-- info -->
+                <div class="registered__text">Registration is completed.</div>
+                <!-- ok button -->
+                <button class="registered__ok">Ok</button>
+            </div>
+            <!-- loading animation with own dark overlay -->
+            <div class="loading hidden">
+                <div class="loading__animation">
+                    <img class="loading__animation--svg" 
+                    src="./Ploranza-assets/dropdownmenu-images/loadingRound.png" 
+                    alt="loading">
+                </div>
+            </div>
+            <!-- unvisible overlay window popup for userpanel dropdown -->
+            <div class="overlay-iv hidden"></div>
         </section>
         <!-- •| #(POP-UP WINDOW LAYERS) end |◄◄◄◄◄◄◄◄◄◄ -->
         <!-- ◄◄|==========|==========|==========|==========|==========|==========|►► -->
