--- a/03 ■► JS DOM/e-Commerce website project (03-10-2023 to 03-12-2023)/Ploranza.html
+++ b/03 ■► JS DOM/e-Commerce website project (03-10-2023 to 03-12-2023)/Ploranza.html
@@ -72,7 +72,7 @@
                         <!-- will be visible when something change on fav or cart list -->
                     </div>
                     <!-- dropdown menu of profile in the user panel -->
-                    <div class="header__userpanel--dropdown hidden">
+                    <div class="header__userpanel--dropdown invisible">
                         <ul class="header__userpanel--dropdown_column">
                             <!-- switch light or dark mode -->
                             <li class="header__userpanel--dropdown_column-switch-visual">
@@ -112,7 +112,7 @@
                             </li>
                             <!-- dropdown height will be auto with padding because of user not logged in, sign in will seem, rest will not -->
                             <li class="header__userpanel--dropdown_column-signin">
-                                <a href="#">
+                                <a href="./Ploranza-signin-register.html">
                                     <i class="fa-solid fa-circle-user fa-1x"></i>
                                     Sign in
                                 </a>
@@ -141,7 +141,7 @@
                 <a class="nav__furniture" href="#">Furniture</a>
                 <a class="nav__software" href="#">Software</a>
                 <!-- dropdown of woman menu -->
-                <div class="nav__dropdown woman hidden">
+                <div class="nav__dropdown woman">
                     <!-- container of unordered lists -->
                     <div class="nav__dropdown--categories">
                         <ul class="nav__dropdown--categories_columns">
@@ -188,7 +188,7 @@
                     </div>
                 </div>
                 <!-- dropdown of man menu -->
-                <div class="nav__dropdown man hidden">
+                <div class="nav__dropdown man">
                     <!-- container of unordered lists -->
                     <div class="nav__dropdown--categories">
                         <ul class="nav__dropdown--categories_columns">
@@ -231,7 +231,7 @@
                     </div>
                 </div>
                 <!-- dropdown of kid menu -->
-                <div class="nav__dropdown kid hidden">
+                <div class="nav__dropdown kid">
                     <!-- container of unordered lists -->
                     <div class="nav__dropdown--categories">
                         <ul class="nav__dropdown--categories_columns">
@@ -257,7 +257,7 @@
                     </div>
                 </div>
                 <!-- dropdown of accessories menu -->
-                <div class="nav__dropdown accessories hidden">
+                <div class="nav__dropdown accessories">
                     <!-- container of unordered lists -->
                     <div class="nav__dropdown--categories">
                         <ul class="nav__dropdown--categories_columns">
@@ -288,7 +288,7 @@
                     </div>
                 </div>
                 <!-- dropdown of electronics menu -->
-                <div class="nav__dropdown electronics hidden">
+                <div class="nav__dropdown electronics">
                     <!-- container of unordered lists -->
                     <div class="nav__dropdown--categories">
                         <ul class="nav__dropdown--categories_columns">
@@ -330,7 +330,7 @@
                     </div>
                 </div>
                 <!-- dropdown of sport menu -->
-                <div class="nav__dropdown sport hidden">
+                <div class="nav__dropdown sport">
                     <!-- container of unordered lists -->
                     <div class="nav__dropdown--categories">
                         <ul class="nav__dropdown--categories_columns">
@@ -353,7 +353,7 @@
                     </div>
                 </div>
                 <!-- dropdown of furniture menu -->
-                <div class="nav__dropdown furniture hidden">
+                <div class="nav__dropdown furniture">
                     <!-- container of unordered lists -->
                     <div class="nav__dropdown--categories">
                         <ul class="nav__dropdown--categories_columns">
@@ -382,7 +382,7 @@
                     </div>
                 </div>
                 <!-- dropdown of software menu -->
-                <div class="nav__dropdown software hidden">
+                <div class="nav__dropdown software">
                     <!-- container of unordered lists -->
                     <div class="nav__dropdown--categories">
                         <ul class="nav__dropdown--categories_columns">
@@ -521,42 +521,42 @@
                 <!-- header -->
                 <h3 class="section3-topsellbooks__header">TOP SELLERS IN BOOKS FOR YOU</h3>
                 <!-- book cards -->
-                <a class="section3-topsellbooks__cards">
+                <a class="section3-topsellbooks__cards" href="#">
                     <img src="./Ploranza-assets/homepage-book-images/51IA4hT6jrL._SX380_BO1,204,203,200_.jpg" 
                     alt="book-images" class="section3-topsellbooks__cards--img">
                 </a>
                 <!-- book cards -->
-                <a class="section3-topsellbooks__cards">
+                <a class="section3-topsellbooks__cards" href="#">
                     <img src="./Ploranza-assets/homepage-book-images/61DiOXBOq4L.jpg" 
                     alt="book-images" class="section3-topsellbooks__cards--img">
                 </a>
                 <!-- book cards -->
-                <a class="section3-topsellbooks__cards">
+                <a class="section3-topsellbooks__cards" href="#">
                     <img src="./Ploranza-assets/homepage-book-images/71aMLMZWutL.jpg" 
                     alt="book-images" class="section3-topsellbooks__cards--img">
                 </a>
                 <!-- book cards -->
-                <a class="section3-topsellbooks__cards">
+                <a class="section3-topsellbooks__cards" href="#">
                     <img src="./Ploranza-assets/homepage-book-images/python.jpg" 
                     alt="book-images" class="section3-topsellbooks__cards--img">
                 </a>
                 <!-- book cards -->
-                <a class="section3-topsellbooks__cards">
+                <a class="section3-topsellbooks__cards" href="#">
                     <img src="./Ploranza-assets/homepage-book-images/913tvBe7OOL.jpg" 
                     alt="book-images" class="section3-topsellbooks__cards--img">
                 </a>
                 <!-- book cards -->
-                <a class="section3-topsellbooks__cards">
+                <a class="section3-topsellbooks__cards" href="#">
                     <img src="./Ploranza-assets/homepage-book-images/819DmGB3vhL.jpg" 
                     alt="book-images" class="section3-topsellbooks__cards--img">
                 </a>
                 <!-- book cards -->
-                <a class="section3-topsellbooks__cards">
+                <a class="section3-topsellbooks__cards" href="#">
                     <img src="./Ploranza-assets/homepage-book-images/61efrLvvaxL.jpg" 
                     alt="book-images" class="section3-topsellbooks__cards--img">
                 </a>
                 <!-- book cards -->
-                <a class="section3-topsellbooks__cards">
+                <a class="section3-topsellbooks__cards" href="#">
                     <img src="./Ploranza-assets/homepage-book-images/61ZuZASPz2L.jpg" 
                     alt="book-images" class="section3-topsellbooks__cards--img">
                 </a>
@@ -646,27 +646,27 @@
                 <ul class="footer__columns">
                     <h3 class="footer__columns--headers">Ploranza</h3>
                     <li class="footer__columns--lists">
-                        <a href="#">
+                        <a href="./Ploranza-aboutus.html">
                             <i class="fa-solid fa-circle-info fa-1x"></i>
                             About Us</a>
                     </li>
                     <li class="footer__columns--lists">
-                        <a href="#">
+                        <a href="#" class="career">
                             <i class="fa-solid fa-laptop-code fa-1x"></i>
                             Career</a>
                     </li>
                     <li class="footer__columns--lists">
-                        <a href="#">
+                        <a href="#" class="contact">
                             <i class="fa-solid fa-headset fa-1x"></i>
                             Contact</a>
                     </li>
                     <li class="footer__columns--lists">
-                        <a href="#">
+                        <a href="#" class="sellinpol">
                             <i class="fa-solid fa-hand-holding-dollar fa-1x"></i>
                             Sell in Ploranza</a>
                     </li>
                     <li class="footer__columns--lists">
-                        <a href="#">
+                        <a href="./Ploranza-locations.html">
                             <i class="fa-solid fa-map-location-dot fa-1x"></i>
                             Locations</a>
                     </li>
@@ -674,31 +674,31 @@
                 <ul class="footer__columns">
                     <h3 class="footer__columns--headers">Social Media</h3>
                     <li class="footer__columns--lists">
-                        <a href="#">
+                        <a href="http://facebook.com/">
                             <i class="fa-brands fa-facebook fa-1x"></i>
                             Facebook
                         </a>
                     </li>
                     <li class="footer__columns--lists">
-                        <a href="#">
+                        <a href="http://twitter.com/">
                             <i class="fa-brands fa-twitter fa-1x"></i>
                             Twitter
                         </a>
                     </li>
                     <li class="footer__columns--lists">
-                        <a href="#">
+                        <a href="http://instagram.com/">
                             <i class="fa-brands fa-square-instagram fa-1x"></i>
                             Instagram
                         </a>
                     </li>
                     <li class="footer__columns--lists">
-                        <a href="#">
+                        <a href="http://youtube.com/">
                             <i class="fa-brands fa-youtube fa-1x"></i>
                             YouTube
                         </a>
                     </li>
                     <li class="footer__columns--lists">
-                        <a href="#">
+                        <a href="http://mail.google.com/">
                             <i class="fa-solid fa-envelope fa-1x"></i>
                             e-Mail
                         </a>
@@ -707,19 +707,19 @@
                 <ul class="footer__columns">
                     <h3 class="footer__columns--headers">Support</h3>
                     <li class="footer__columns--lists">
-                        <a href="#">
+                        <a href="./Ploranza-faq.html">
                             <i class="fa-solid fa-question fa-1x"></i>
                             Frequently Asked Questions
                         </a>
                     </li>
                     <li class="footer__columns--lists">
-                        <a href="#">
+                        <a href="#" class="livechat">
                             <i class="fa-brands fa-rocketchat fa-1x"></i>
                             Live chat
                         </a>
                     </li>
                     <li class="footer__columns--lists">
-                        <a href="#">
+                        <a href="#" class="returnpolicy">
                             <i class="fa-solid fa-shield-halved fa-1x"></i>
                             Return policy
                         </a>
@@ -731,9 +731,9 @@
                     ©2023 CODERS Denmark Corps. All Rights Reserved.
                 </p>
                 <span class="bottom__conditions">
-                    <a href="#">Privacy Policy</a>
-                    <a href="#">Terms & Conditions</a>
-                    <a href="#">Terms of Use</a>
+                    <a href="#" class="privbutton">Privacy Policy</a>
+                    <a href="#" class="termsbutton">Terms & Conditions</a>
+                    <a href="#" class="tuse">Terms of Use</a>
                 </span>
             </div>
         </footer>
@@ -746,7 +746,7 @@
             <!-- blue background overlay for terms window popups -->
             <div class="overlay-blurbg hidden"></div>
             <!-- privacy policy popup window -->
-            <div class="privacypolicy hidden">
+            <div class="privacypolicy invisible-v2">
                 <!-- x button -->
                 <button class="privacypolicy__cross">
                     <i class="fa-solid fa-xmark fa-1x"></i>
@@ -879,7 +879,7 @@
                 </div>
             </div>
             <!-- terms and conditions popup window -->
-            <div class="termsofuse hidden">
+            <div class="termsofuse invisible-v2">
                 <!-- x button -->
                 <button class="termsofuse__cross">
                     <i class="fa-solid fa-xmark fa-1x"></i>
