--- a/03 ■► JS DOM/e-Commerce website project (03-10-2023 to 03-12-2023)/Ploranza-locations.html
+++ b/03 ■► JS DOM/e-Commerce website project (03-10-2023 to 03-12-2023)/Ploranza-locations.html
@@ -415,10 +415,12 @@
         <!-- ◄◄|==========|==========|==========|==========|==========|==========|►► -->
         <!-- ►►►►►►►►►►| #(SECTION 0 - BREADCRUMB) start |• -->
         <section id="breadcrumb">
-            <div class="breadcrumb">Homepage/test/123
+            <div class="breadcrumb">
                 <!-- in JS, add with ${} innerHTML, add with "/" without space -->
                 <!-- <a class="breadcrumb__links" href="#">HOME</a> --- a sample p1 -->
                 <!-- <a class="breadcrumb__links" href="#">/About Us</a> --- a sample p2 -->
+                <a href="./Ploranza.html">Homepage</a>
+                <a href="#">/Locations</a>
             </div>
         </section>
         <!-- •| #(SECTION 0 - BREADCRUMB) end |◄◄◄◄◄◄◄◄◄◄ -->
