--- a/03 ■► JS DOM/e-Commerce website project (03-10-2023 to 03-12-2023)/Ploranza-signin-register.html
+++ b/03 ■► JS DOM/e-Commerce website project (03-10-2023 to 03-12-2023)/Ploranza-signin-register.html
@@ -32,9 +32,11 @@
         <!-- ►►►►►►►►►►| #(SECTION - AUTHENTICATION) start |• -->
         <section id="section-auth">
             <!-- go back homepage button -->
-            <button class="section-auth__gobackhome">
-                <i class="fa-solid fa-house-chimney fa-1x"></i> 
-            </button>
+            <a href="./Ploranza.html">
+                <button class="section-auth__gobackhome">
+                    <i class="fa-solid fa-house-chimney fa-1x"></i> 
+                </button>
+            </a>
             <!-- choose sign in or sign up to swap menus -->
             <div class="section-auth__buttons">
                 <button class="section-auth__buttons--login">LOGIN</button>
