--- a/03 ■► JS DOM/e-Commerce website project (03-10-2023 to 03-12-2023)/Ploranza.html
+++ b/03 ■► JS DOM/e-Commerce website project (03-10-2023 to 03-12-2023)/Ploranza.html
@@ -415,10 +415,11 @@
         <!-- ◄◄|==========|==========|==========|==========|==========|==========|►► -->
         <!-- ►►►►►►►►►►| #(SECTION 0 - BREADCRUMB) start |• -->
         <section id="breadcrumb">
-            <div class="breadcrumb">Homepage/test/123
+            <div class="breadcrumb">
                 <!-- in JS, add with ${} innerHTML, add with "/" without space -->
                 <!-- <a class="breadcrumb__links" href="#">HOME</a> --- a sample p1 -->
                 <!-- <a class="breadcrumb__links" href="#">/About Us</a> --- a sample p2 -->
+                <a href="#">Homepage</a>
             </div>
         </section>
         <!-- •| #(SECTION 0 - BREADCRUMB) end |◄◄◄◄◄◄◄◄◄◄ -->
@@ -651,17 +652,17 @@
                             About Us</a>
                     </li>
                     <li class="footer__columns--lists">
-                        <a href="#" class="career">
+                        <a class="career">
                             <i class="fa-solid fa-laptop-code fa-1x"></i>
                             Career</a>
                     </li>
                     <li class="footer__columns--lists">
-                        <a href="#" class="contact">
+                        <a class="contact">
                             <i class="fa-solid fa-headset fa-1x"></i>
                             Contact</a>
                     </li>
                     <li class="footer__columns--lists">
-                        <a href="#" class="sellinpol">
+                        <a class="sellinpol">
                             <i class="fa-solid fa-hand-holding-dollar fa-1x"></i>
                             Sell in Ploranza</a>
                     </li>
@@ -713,13 +714,13 @@
                         </a>
                     </li>
                     <li class="footer__columns--lists">
-                        <a href="#" class="livechat">
+                        <a class="livechat">
                             <i class="fa-brands fa-rocketchat fa-1x"></i>
                             Live chat
                         </a>
                     </li>
                     <li class="footer__columns--lists">
-                        <a href="#" class="returnpolicy">
+                        <a class="returnpolicy">
                             <i class="fa-solid fa-shield-halved fa-1x"></i>
                             Return policy
                         </a>
@@ -731,9 +732,9 @@
                     ©2023 CODERS Denmark Corps. All Rights Reserved.
                 </p>
                 <span class="bottom__conditions">
-                    <a href="#" class="privbutton">Privacy Policy</a>
-                    <a href="#" class="termsbutton">Terms & Conditions</a>
-                    <a href="#" class="tuse">Terms of Use</a>
+                    <a class="privbutton">Privacy Policy</a>
+                    <a class="termsbutton">Terms & Conditions</a>
+                    <a class="tuse">Terms of Use</a>
                 </span>
             </div>
         </footer>
